--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
     sdk: flutter
   flutter_rating_stars: ^1.0.3+4
   flutter_typeahead: ^4.0.0
-  fluttericon: ^2.0.0
-  font_awesome_flutter: ^10.1.0
+  flutterfire_ui: ^0.4.2
   google_fonts: ^2.3.2
   hexcolor: ^2.0.7
   html: ^0.15.0
@@ -61,14 +60,14 @@ dependencies:
   web_ffi: ^0.7.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
   android: true
-  image_path: "assets/logo_forground.png" 
+  image_path: "assets/logo_forground.png"
   adaptive_icon_background: "#ffffff"
   adaptive_icon_forground: "assets/logo_forground.png"
 
@@ -86,13 +85,10 @@ flutter:
   assets:
     - assets/placeholder.png
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
