--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   html: ^0.15.0
   image_cropper: ^2.0.3
   image_picker: ^0.8.5+3
+  paginate_firestore: ^1.0.3+1
   path_provider: ^2.0.10
   provider: ^6.0.2
   rating_dialog: ^2.0.3
